# Video-Convertor

./: .gitattributes  CMakeLists.txt  README.md  run.bat
buildTool/lib/TGUI/lib/cmake/TGUI/: TGUISharedTargets-debug.cmake  TGUISharedTargets-release.cmake  TGUISharedTargets.cmake  TGUIStaticTargets-debug.cmake  TGUIStaticTargets-release.cmake  TGUIStaticTargets.cmake
sourceCode/include/: clasa_de_baza.h  fereastra_download_audio.h  fereastra_download_video.h  fereastra_mp3_to_wav.h  fereastra_mp4_to_mp3.h  fereastra_principala.h  fereastra_webm_to_mp4.h  functii_draw.h  functionalitati.h
sourceCode/src/: fereastra_download_audio.cpp  fereastra_download_video.cpp  fereastra_mp3_to_wav.cpp  fereastra_mp4_to_mp3.cpp  fereastra_principala.cpp  fereastra_webm_to_mp4.cpp  functii_draw.cpp  functionalitati.cpp  main.cpp
